--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
   </section>
 
-    <section class="max-w-7xl mx-auto px-4 py-16">
+    <section class="max-w-7xl ml-auto px-2 py-16">
         <div class="flex items-center justify-between mb-6">
             <h2 class="text-xl font-bold">Explore More</h2>
             <div class="flex space-x-2">
