--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="w-full max-w-7xl mx-auto flex items-center justify-between px-4 py-3">
       <!-- Logo -->
       <div class="flex items-center gap-2">
-        <img src="img/logo.png" alt="Logo" class="w-[100px]">
+        <img src="img/logo.png" class="w-[100px]" alt="Smart-Lab Global">
       </div>
 
       <!-- Nav Links -->
